--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.11",
     "crypto-js": "^4.1.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.22",
     "sequelize": "^6.30.0",
